Changelog
=========

trunk (0.1dev)
--------------

- add adapter to create a Blog Entry [hplocher]
  (title, body text, only atm)
